kubernetes/external-dns/overlays/okd/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: external-dns
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: pihole.okd.arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 10.0.0.99/32
    - type: Allow
      to:
        dnsName: pihole.apps.okd.arthurvardevanyan.com
    - type: Allow
      to:
        cidrSelector: 10.0.0.131/32
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
